<resources>
    <string name="app_name">GrabFoodAppProject</string>
    <string name="delivery">Deliver</string>
    <string name="food_icon">Food Icon</string>
    <string name="item_title">Item Title</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="default_review">5.0 (100) • $$$$ • Vietnamese Cuisine</string>
    <string name="default_price">10.000đ • From 30 mins</string>
    <string name="default_percentage_discount">20% off</string>
    <string name="default_price_discount">26.000đ off</string>
    <string name="back_button">back</string>
    <string-array name="spinner_location">
        <item>Số 8, Hoàng Quốc Việt, Cầu Giấy, Hà Nội</item>
        <item>Khu đô thị Xuân Phương, Nam Từ Liêm, Hà Nội</item>
        <item>Số 16, Đường Bưởi, Tây Hồ, Hà Nội</item>
        <item>Ngõ 15, Nghĩa Tân, Cầu Giấy, Hà Nội</item>
        <item>116 Hoàng Quốc Việt, Cầu Giấy, Hà Nội</item>
    </string-array>
    <string name="noodle">Noodles</string>
    <string name="rice">Rice</string>
    <string name="hotpot">Hotpot</string>
    <string name="fast_food">Fast Food</string>
    <string name="coffee">Coffee</string>
    <string name="healthy_food">Healthy Food</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="flash_deals">Flash deals</string>
    <string name="order_soon_to_get_a_limited_time_offer">Order soon to get a limited time offer!</string>
    <string name="burger_fat_cat">Burger Fat Cat</string>
    <string name="_10_000_off">10.000đ off</string>
    <string name="min_50_000_spend">Min. 50.000đ spend</string>
    <string name="min_50_000_spend1">Min. 50.000đ spend</string>
    <string name="_10_000_off1">10.000đ off</string>
    <string name="burger_factory_base_21">Burger Factory - Base 2</string>
    <string name="burger_fat_cat1">Burger Fat Cat</string>
    <string name="_10_000_off2">10.000đ off</string>
    <string name="min_50_000_spend2">Min. 50.000đ spend</string>
    <string name="dat_ngay">Đặt ngay</string>
    <string name="arrow_icon">Arrow Icon</string>
    <string name="t_ngay">Đặt ngay</string>
    <string name="b_nh_m_vi_t">Bánh mì Việt</string>
    <string name="banh_mi">banh_mi</string>
    <string name="shop_image">shop_image</string>
    <string name="recommended_for_you">Recommended For You</string>
    <string name="meal_under_40k">Meal under 40K</string>
    <string name="save_every_day">Save every day</string>
    <string name="qu_n_ngon_b">Quán ngon ĐB</string>
    <string name="ngon_ph_i_th">Ngon phải thử</string>
    <string name="si_u_ti_c_99k">Siêu tiệc 99K</string>
    <string name="deal_to_ti_c_to">Deal to tiệc to</string>
    <string name="back_to_school">Back to school</string>
    <string name="khao_ti_c_t_u_tr">Khao tiệc tựu trư..</string>
    <string name="arrow_button">arrow_button</string>
    <string name="back_icon">Back Icon</string>
    <string name="text_btn_detail">Get GrabUnlimited now to enjoy free\ndelivery everyday! </string>
    <string name="food_orders">Food Orders</string>
    <string name="dine_out_voucher">Dine Out Voucher</string>
    <string name="view_dine_out_vouchers">View Dine Out Vouchers</string>
    <string name="dine_out_vouchers">Dine Out Vouchers</string>
    <string name="its_empty_now">It\'s empty now</string>
    <string name="purchase_a_dine_out_voucher_and_find_it_here">Purchase a Dine Out Voucher and find it here!</string>
    <string name="favourite_restaurants">Favourite Restaurants</string>
    <string name="all_your_favourite_restaurants_in_one_place">All your favourite restaurants, in one place</string>
    <string name="we_re_making_it_easier_to_order_food_from_places_you_swear_by_simply_tap_the_heart_icon_on_the_restaurant_page_to_fill_this_space">We\'re making it easier to order food from places you swear by. Simply tap the heart icon on the restaurant page to fill this space!</string>
    <string name="coupon_image">coupon_image</string>
    <string name="left_arrow_ic">left_arrow_ic</string>
    <string name="favourite_image">favourite_image</string>
    <string name="Back">Back\n</string>
    <string name="cafe">Cafe</string>
    <string name="_20_off">20% off</string>
    <string name="bun_dau">Bun dau</string>
    <string name="_30_mins">30 mins ·</string>
    <string name="_3_3km">3.3km</string>
    <string name="_12_30">12:30</string>
    <string name="dine_out_deals">Dine Out Deals</string>
    <string name="get_it_quick">Get it quick</string>
    <string name="qu_ngon_ngon">Quá ngon ngon</string>
    <string name="crowd_s_pick_for_dinner">Crowd\'s Pick For Dinner</string>
    <string name="b_a_ngon_0">Bữa ngon 0Đ</string>
    <string name="ch_t_deal_ngay">Chốt deal ngay</string>
    <string name="near_me">Near Me</string>
    <string name="tri_u_m_n_bao_r">Triệu món bao rẻ</string>
    <string name="grab_ngon_r">Grab ngon rẻ</string>
    <string name="gi_m_l_n_n_50">Giảm lên đến 50%</string>
    <string name="bao_ti_t_ki_m">Bao tiết kiệm</string>
    <string name="combo_sieu_hoi">Combo sieu hoi</string>
    <string name="ad_t_ngay">Ad · Đặt ngay</string>
    <string name="noodles">Noodles</string>
    <string name="sale">sale</string>
    <string name="ad">Ad</string>
</resources>