<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp">

    <ImageView
        android:id="@+id/restaurantImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/placeholder_restaurant"
        android:contentDescription="@string/restaurant_name"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/restaurantName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restaurant_name"
            android:textSize="@dimen/heading_size"
            android:textStyle="bold"
            android:fontFamily="@font/helvetica_bold"/>

        <TextView
            android:id="@+id/restaurantReview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawablePadding="2dp"
            android:text="@string/default_review"
            android:textSize="@dimen/content_size"
            android:fontFamily="@font/helvetica"
            app:drawableStartCompat="@drawable/star" />

        <TextView
            android:id="@+id/restaurantPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawablePadding="2dp"
            android:text="@string/default_price"
            android:textSize="@dimen/content_size"
            android:fontFamily="@font/helvetica"
            app:drawableStartCompat="@drawable/infinity" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/restaurantPercentageDiscount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:drawablePadding="5dp"
                android:text="@string/default_percentage_discount"
                android:textSize="@dimen/content_size"
                android:fontFamily="@font/helvetica"
                android:background="@drawable/rounded_corner"
                app:drawableStartCompat="@drawable/price_tag" />

            <TextView
                android:id="@+id/restaurantPriceDiscount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:text="@string/default_price_discount"
                android:textSize="@dimen/content_size"
                android:fontFamily="@font/helvetica"
                android:background="@drawable/rounded_corner"
                app:drawableStartCompat="@drawable/price_tag" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>