<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        app:cardBackgroundColor="@color/green"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/item_image_4"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:padding="6dp"
            app:srcCompat="@drawable/rec_bundau" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/item_sale4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/_20_off"
        android:textColor="@color/orange"
        android:textSize="@dimen/content_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView10"
        app:layout_constraintTop_toBottomOf="@+id/cardView3" />

    <TextView
        android:id="@+id/item_food_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/bun_dau"
        android:textColor="@color/black"
        android:textSize="@dimen/heading_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView10"
        app:layout_constraintTop_toBottomOf="@+id/item_sale4" />

    <TextView
        android:id="@+id/item_time_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/_30_mins"
        android:textSize="@dimen/content_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/item_food_4"
        app:layout_constraintTop_toBottomOf="@+id/item_food_4" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="12dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/item_sale4"
        app:layout_constraintStart_toStartOf="@+id/cardView3"
        app:layout_constraintTop_toTopOf="@+id/item_sale4"
        app:srcCompat="@drawable/price_tag_1"
        android:contentDescription="@string/food_icon"/>

    <TextView
        android:id="@+id/item_distance_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/_3_3km"
        android:textSize="@dimen/content_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/item_time_4"
        app:layout_constraintEnd_toEndOf="@+id/item_food_4"
        app:layout_constraintStart_toEndOf="@+id/item_time_4"
        app:layout_constraintTop_toTopOf="@+id/item_time_4" />
</androidx.constraintlayout.widget.ConstraintLayout>