<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/voucher_fragment"
    app:cardCornerRadius="15dp"
    app:cardElevation="0dp"
    tools:context=".fragment.order.VoucherFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="@color/very_light_blue">
        <ImageView
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/coupon_image"
            android:src="@drawable/coupon"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginStart="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_dine_out_vouchers"
            android:fontFamily="@font/helvetica"
            android:textSize="@dimen/content_size"
            android:textColor="@color/dark_blue"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dine_out_voucher"
            android:fontFamily="@font/helvetica_bold"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/heading_size"
            android:drawablePadding="5dp"
            app:drawableEndCompat="@drawable/right_arrow" />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>