<?xml version="1.0" encoding="utf-8"?>

<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/grid_view_custom"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:columnCount="2"
    android:gravity="center"
    android:orientation="horizontal"
    android:padding="8dp">

    <androidx.cardview.widget.CardView
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_margin="16dp"
        android:elevation="6dp"
        app:cardBackgroundColor="@color/light_blue"
        app:cardCornerRadius="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:orientation="vertical"
                android:paddingStart="16dp">

                <!-- Title -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/helvetica_bold"
                    android:text="@string/meal_under_40k"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/heading_size"
                    android:textStyle="bold" />

                <!-- Subtitle -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/helvetica"
                    android:text="@string/save_every_day"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:paddingTop="3dp"
                    android:src="@drawable/ic_arrow_button" />
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="185dp"
        android:layout_height="90dp"
        android:layout_margin="16dp"
        android:elevation="6dp"
        app:cardBackgroundColor="@color/pink"
        app:cardCornerRadius="20dp"

        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:orientation="vertical"
                android:paddingStart="16dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/helvetica_bold"
                    android:text="@string/qu_n_ngon_b"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/heading_size"
                    android:textStyle="bold" />

                <!-- Subtitle -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/helvetica"
                    android:text="@string/ngon_ph_i_th"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:paddingTop="3dp"
                    android:src="@drawable/ic_arrow_button" />
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="185dp"
        android:layout_height="90dp"
        android:layout_margin="16dp"
        android:elevation="6dp"
        app:cardBackgroundColor="@color/light_green"
        app:cardCornerRadius="20dp"

        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:orientation="vertical"
                android:paddingStart="16dp">

                <!-- Title -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/helvetica_bold"
                    android:text="@string/si_u_ti_c_99k"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/heading_size"
                    android:textStyle="bold" />

                <!-- Subtitle -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/helvetica"
                    android:text="@string/deal_to_ti_c_to"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:paddingTop="3dp"
                    android:src="@drawable/ic_arrow_button" />
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="185dp"
        android:layout_height="90dp"
        android:layout_margin="16dp"
        android:elevation="6dp"
        app:cardBackgroundColor="@color/light_orange"
        app:cardCornerRadius="20dp"

        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:orientation="vertical"
                android:paddingStart="16dp">

                <!-- Title -->
                <TextView
                    android:id="@+id/meal_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/helvetica_bold"
                    android:text="@string/khao_ti_c_t_u_tr"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/heading_size"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/helvetica"
                    android:text="@string/back_to_school"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:paddingTop="3dp"
                    android:src="@drawable/ic_arrow_button" />
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</GridLayout>
