<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        app:cardBackgroundColor="@color/green_grab"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/item_image_recommend"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:padding="6dp"
            app:srcCompat="@drawable/banh_mi_co_chun" />
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/discount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/sale"
        android:textColor="#E64A19"
        android:textSize="@dimen/content_size"
        app:layout_constraintEnd_toEndOf="@+id/cardView4"
        app:layout_constraintStart_toStartOf="@+id/cardView4"
        app:layout_constraintTop_toBottomOf="@+id/cardView4" />

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ellipsize="end"
        android:text="@string/banh_mi"
        android:textColor="@android:color/black"
        android:textSize="@dimen/heading_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/discount"
        app:layout_constraintStart_toStartOf="@+id/discount"
        app:layout_constraintTop_toBottomOf="@+id/discount" />

    <TextView
        android:id="@+id/detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/ad"
        android:textSize="@dimen/content_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/name"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/name" />


</androidx.constraintlayout.widget.ConstraintLayout>
